--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     >
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true"
+        />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="true"
+        />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
