--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         tools:targetApi="31"
         >
         <activity
-            android:name=".AppActivity"
+            android:name=".view.main.MainActivity"
             android:exported="true"
             >
             <intent-filter>
