--- a/ffmpeg/build.gradle
+++ b/ffmpeg/build.gradle
@@ -5,7 +5,6 @@ plugins {
 android {
     namespace 'xyz.slkagura.ffmpeg'
     compileSdk 32
-
     defaultConfig {
         minSdk 28
         targetSdk 32
@@ -18,7 +17,6 @@ android {
             }
         }
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -28,17 +26,17 @@ android {
     externalNativeBuild {
         cmake {
             path "src/main/cpp/CMakeLists.txt"
-            version "3.18.1"
+            version "3.22.1"
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    ndkVersion "25.1.8937393"
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     testImplementation 'junit:junit:4.13.2'
