--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,6 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,6 +25,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     dataBinding {
+        enabled = true
+    }
+    viewBinding {
         enabled = true
     }
 }
