--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -2,7 +2,13 @@ plugins {
     id 'java-gradle-plugin'
 }
 
+repositories {
+    google()
+    mavenCentral()
+}
+
 dependencies {
+    implementation 'com.android.tools.build:gradle-api:7.3.1'
     implementation gradleApi()
 }
 
