--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:name="android.hardware.camera.autofocus"
         android:required="true"
         />
+    <uses-feature
+        android:glEsVersion="0x00030000"
+        android:required="true"
+        />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -57,6 +61,14 @@
             />
         <activity
             android:name=".ui.view.click.ClickActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".ui.view.sensor.SensorActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".ui.view.opengl.OpenGLActivity"
             android:exported="false"
             />
     </application>
