--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,17 @@
 pluginManagement {
     repositories {
+        // 阿里
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        // 华为
+        maven { url 'https://repo.huaweicloud.com/repository/maven/' }
+        // 网易
+        maven { url 'https://mirrors.163.com/maven/repository/maven-public/' }
+        // 上海交通大学
+        maven { url 'https://mirrors.sjtug.sjtu.edu.cn/maven-central/' }
+        maven { url 'https://jitpack.io' }
         gradlePluginPortal()
         google()
         mavenCentral()
@@ -8,6 +20,18 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        // 阿里
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        // 华为
+        maven { url 'https://repo.huaweicloud.com/repository/maven/' }
+        // 网易
+        maven { url 'https://mirrors.163.com/maven/repository/maven-public/' }
+        // 上海交通大学
+        maven { url 'https://mirrors.sjtug.sjtu.edu.cn/maven-central/' }
+        maven { url 'https://jitpack.io' }
         google()
         mavenCentral()
     }
