--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'xyz.slkagura.reinforce'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    // id 'xyz.slkagura.reinforce'
 }
-
 android {
     namespace 'xyz.slkagura'
     compileSdk 33
@@ -30,11 +31,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    dataBinding {
-        enabled = true
+    kotlinOptions {
+        jvmTarget = "11"
     }
-    viewBinding {
-        enabled = true
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.3"
+    }
+    buildFeatures {
+        compose = true
+        viewBinding = true
+        dataBinding = true
     }
     externalNativeBuild {
         cmake {
@@ -44,11 +50,19 @@ android {
     }
     ndkVersion '25.2.9519653'
 }
-
 dependencies {
+    // Compose
+    implementation platform("androidx.compose:compose-bom:2022.12.00")
+    androidTestImplementation platform("androidx.compose:compose-bom:2022.12.00")
+    implementation("androidx.compose.material3:material3")
+    implementation("androidx.compose.ui:ui")
+    implementation("androidx.compose.ui:ui-tooling-preview")
+    debugImplementation("androidx.compose.ui:ui-tooling")
+    implementation("androidx.activity:activity-compose")
+    implementation("androidx.core:core-ktx:1.9.0")
     // 数据库
-    implementation 'androidx.room:room-runtime:2.5.0'
-    annotationProcessor 'androidx.room:room-compiler:2.5.0'
+    implementation 'androidx.room:room-runtime:2.5.1'
+    annotationProcessor 'androidx.room:room-compiler:2.5.1'
     // 网络
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
