--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,5 +71,13 @@
             android:name=".ui.view.opengl.OpenGLActivity"
             android:exported="false"
             />
+        <activity
+            android:name=".ui.view.grafika.GrafikaActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".grafika.CameraCaptureActivity"
+            android:exported="false"
+            />
     </application>
 </manifest>
