--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ android {
     ndkVersion '25.2.9519653'
 }
 dependencies {
+    implementation 'io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.11'
     // Compose
     implementation platform("androidx.compose:compose-bom:2022.12.00")
     androidTestImplementation platform("androidx.compose:compose-bom:2022.12.00")
@@ -59,7 +60,7 @@ dependencies {
     implementation("androidx.compose.ui:ui-tooling-preview")
     debugImplementation("androidx.compose.ui:ui-tooling")
     implementation("androidx.activity:activity-compose")
-    implementation("androidx.core:core-ktx:1.9.0")
+    implementation("androidx.core:core-ktx")
     // 数据库
     implementation 'androidx.room:room-runtime:2.5.1'
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
