--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
 
     <application
         android:name="xyz.slkagura.reinforce.Starter"
@@ -77,6 +78,10 @@
             />
         <activity
             android:name=".grafika.CameraCaptureActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".ui.view.manager.PackageManagerActivity"
             android:exported="false"
             />
     </application>
